[gd_scene load_steps=8 format=3 uid="uid://c3lken4ggiqp4"]

[ext_resource type="Script" uid="uid://fgr4k5las8am" path="res://scripts/Enemies/AbstractEnemy.gd" id="1_5x1c5"]
[ext_resource type="Texture2D" uid="uid://7u60d7pyp7pe" path="res://textures/Enemies/BushGuardian/Enemy.png" id="2_hp5u7"]
[ext_resource type="PackedScene" uid="uid://cdofpsqi7asw4" path="res://scripts/CollisionBoxSystem/HitBox.tscn" id="3_godhf"]
[ext_resource type="PackedScene" uid="uid://d1m7x0feb7cba" path="res://scripts/CollisionBoxSystem/HurtBox.tscn" id="4_2kg87"]
[ext_resource type="PackedScene" uid="uid://hxodfbwi7sn4" path="res://scripts/CollisionBoxSystem/ParryBox.tscn" id="5_u67ka"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hp5u7"]
size = Vector2(34, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_uo67k"]
radius = 157.00319

[node name="AbstractEnemyNode" type="CharacterBody2D"]
script = ExtResource("1_5x1c5")
enemy_type = 1
shield_amount = 20
entity_type = 1
stun_parry_needed = 2
health = 30

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.535, 0.535)
texture = ExtResource("2_hp5u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hp5u7")

[node name="RaycastingMovement" type="Node2D" parent="."]

[node name="RightWallRayCast" type="RayCast2D" parent="RaycastingMovement"]
position = Vector2(17, 5)
target_position = Vector2(14, 0)

[node name="LeftWallRayCast" type="RayCast2D" parent="RaycastingMovement"]
position = Vector2(-17, 5)
target_position = Vector2(-15, 0)

[node name="RightFloorRayCast" type="RayCast2D" parent="RaycastingMovement"]
position = Vector2(24, 0)
target_position = Vector2(0, 20)

[node name="LeftFloorRayCast" type="RayCast2D" parent="RaycastingMovement"]
position = Vector2(-25, 0)
target_position = Vector2(0, 20)

[node name="SightOfView" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightOfView"]
light_mask = 3
visibility_layer = 3
shape = SubResource("CircleShape2D_uo67k")

[node name="RayCast2D" type="RayCast2D" parent="SightOfView"]
z_index = 10
target_position = Vector2(156, 0)
collision_mask = 3

[node name="CollisionBoxes" type="Node2D" parent="."]

[node name="Hitbox" parent="CollisionBoxes" node_paths=PackedStringArray("owner_entity") instance=ExtResource("3_godhf")]
position = Vector2(-41, -2)
box_type = 1
owner_entity = NodePath("../..")

[node name="HurtBox" parent="CollisionBoxes" node_paths=PackedStringArray("owner_entity") instance=ExtResource("4_2kg87")]
owner_entity = NodePath("../..")

[node name="ParryBox" parent="CollisionBoxes" node_paths=PackedStringArray("owner_entity") instance=ExtResource("5_u67ka")]
position = Vector2(0, -33)
owner_entity = NodePath("../..")
